fix z-index for animation dropdown overlay

--- a/src/app.css
+++ b/src/app.css
@@ -2544,6 +2544,7 @@ input[type=number]::-webkit-outer-spin-button {
 	position: absolute;
 	top: 10px;
 	left: 10px;
+	z-index: 1;
 }
 
 .animation-dropdown-overlay .animation-dropdown {
